// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskAnalyzer should match snapshot for score=bad 1`] = `
<div>
  <div
    class="yst-flex yst-bg-slate-50 yst-border yst-border-slate-200 yst-rounded-md yst-w-full yst-p-4 yst-gap-4 yst-justify-between yst-mb-5"
  >
    <svg
      aria-hidden="true"
      class="yst-score-icon yst-mt-0.5"
      fill="#dc3232"
      role="img"
      viewBox="0 0 496 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M248 8C111 8 0 119 0 256s111 248 248 248s248-111 248-248S385 8 248 8z M328 176c17.7 0 32 14.3 32 32 s-14.3 32-32 32s-32-14.3-32-32S310.3 176 328 176z M168 176c17.7 0 32 14.3 32 32s-14.3 32-32 32s-32-14.3-32-32S150.3 176 168 176 z M338.2 394.2C315.8 367.4 282.9 352 248 352s-67.8 15.4-90.2 42.2c-13.5 16.3-38.1-4.2-24.6-20.5C161.7 339.6 203.6 320 248 320 s86.3 19.6 114.7 53.8C376.3 390 351.7 410.5 338.2 394.2L338.2 394.2z"
      />
    </svg>
    <div
      class="yst-flex-grow"
    >
      <div
        class="yst-text-black yst-mb-2"
      >
        <span>
          SEO Analysis
        </span>
        : 
        <span
          class="yst-font-semibold"
        >
          Needs improvement
        </span>
      </div>
      <div
        class="yst-text-slate-600"
      >
        This post's SEO is looking good. Your content should perform well across search engines and AI systems.
      </div>
    </div>
  </div>
</div>
`;

exports[`TaskAnalyzer should match snapshot for score=good 1`] = `
<div>
  <div
    class="yst-flex yst-bg-slate-50 yst-border yst-border-slate-200 yst-rounded-md yst-w-full yst-p-4 yst-gap-4 yst-justify-between yst-mb-5"
  >
    <svg
      aria-hidden="true"
      class="yst-score-icon yst-mt-0.5"
      fill="#008a00"
      role="img"
      viewBox="0 0 496 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M248 8C111 8 0 119 0 256s111 248 248 248s248-111 248-248S385 8 248 8z M328 176c17.7 0 32 14.3 32 32 s-14.3 32-32 32s-32-14.3-32-32S310.3 176 328 176z M168 176c17.7 0 32 14.3 32 32s-14.3 32-32 32s-32-14.3-32-32S150.3 176 168 176 z M362.8 346.2C334.3 380.4 292.5 400 248 400s-86.3-19.6-114.8-53.8c-13.6-16.3 11-36.7 24.6-20.5c22.4 26.9 55.2 42.2 90.2 42.2 s67.8-15.4 90.2-42.2C351.6 309.5 376.3 329.9 362.8 346.2L362.8 346.2z"
      />
    </svg>
    <div
      class="yst-flex-grow"
    >
      <div
        class="yst-text-black yst-mb-2"
      >
        <span>
          SEO Analysis
        </span>
        : 
        <span
          class="yst-font-semibold"
        >
          Good
        </span>
      </div>
      <div
        class="yst-text-slate-600"
      >
        This post's SEO is looking good. Your content should perform well across search engines and AI systems.
      </div>
    </div>
  </div>
</div>
`;

exports[`TaskAnalyzer should match snapshot for score=null 1`] = `
<div>
  <div
    class="yst-flex yst-bg-slate-50 yst-border yst-border-slate-200 yst-rounded-md yst-w-full yst-p-4 yst-gap-4 yst-justify-between yst-mb-5"
  >
    <svg
      aria-hidden="true"
      class="yst-score-icon yst-text-slate-300 yst-mt-0.5"
      fill="currentColor"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512z"
      />
    </svg>
    <div
      class="yst-flex-grow"
    >
      <div
        class="yst-text-black yst-mb-2"
      >
        <span>
          SEO Analysis
        </span>
        : 
        <span
          class="yst-font-semibold"
        >
          No score
        </span>
      </div>
      <div
        class="yst-text-slate-600"
      >
        This post's SEO is looking good. Your content should perform well across search engines and AI systems.
      </div>
    </div>
  </div>
</div>
`;

exports[`TaskAnalyzer should match snapshot for score=ok 1`] = `
<div>
  <div
    class="yst-flex yst-bg-slate-50 yst-border yst-border-slate-200 yst-rounded-md yst-w-full yst-p-4 yst-gap-4 yst-justify-between yst-mb-5"
  >
    <svg
      aria-hidden="true"
      class="yst-score-icon yst-mt-0.5"
      fill="#ee7c1b"
      role="img"
      viewBox="0 0 496 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M248 8c137 0 248 111 248 248S385 504 248 504S0 393 0 256S111 8 248 8z M360 208c0-17.7-14.3-32-32-32 s-32 14.3-32 32s14.3 32 32 32S360 225.7 360 208z M344 368c21.2 0 21.2-32 0-32H152c-21.2 0-21.2 32 0 32H344z M200 208 c0-17.7-14.3-32-32-32s-32 14.3-32 32s14.3 32 32 32S200 225.7 200 208z"
      />
    </svg>
    <div
      class="yst-flex-grow"
    >
      <div
        class="yst-text-black yst-mb-2"
      >
        <span>
          SEO Analysis
        </span>
        : 
        <span
          class="yst-font-semibold"
        >
          OK
        </span>
      </div>
      <div
        class="yst-text-slate-600"
      >
        This post's SEO is looking good. Your content should perform well across search engines and AI systems.
      </div>
    </div>
  </div>
</div>
`;
